# Rubiks-cube-puzzle

./: .gitignore  pyproject.toml
docs/source/: conf.py  features.rst  file_format.rst  index.rst  key_commands.rst  quickstart.rst
src/rubiks_cube/: __init__.py  __main__.py  colors.py  cube.py  cube_controller.py  cube_factory.py  cube_view.py  face.py  input.json  validator.py
tests/: test_cube.py  test_cube_controller.py  test_face.py  test_factory.py  test_validation.py
